fixes issue with long filenames overlapping download button on small screens

--- a/app/assets/stylesheets/partials/item-page.scss
+++ b/app/assets/stylesheets/partials/item-page.scss
@@ -164,7 +164,6 @@
 
   & .list-group-item span.filename {
     font-weight: 600;
-    word-break: break-all;
   }
 
   & .list-group-item span.filesize,
